syntax = "proto3";

option go_package = ".;pb";

enum TaskType {
  TASK_COMMAND = 0;
  TASK_HTTP = 1;
}

message CommandTask {
  string name = 1;
  repeated string args = 2;
  bytes input = 3;
}

message HttpTask {
  string url = 1;
  string method = 2;
  map<string, string> headers = 3;
  bytes body = 4;
}

message Task {
  TaskType type = 1;
  bytes config = 2;
}
